--- a/styles/header.css
+++ b/styles/header.css
@@ -57,9 +57,9 @@ h1 {
 
 @media (max-width: 768px) {
     header {
-        padding: 1rem 1.5rem;
         position: relative;
-        z-index: 1200;
+        padding-block: 1rem;
+        z-index: 100;
     }
     .navlinks {
         width: 70%;
@@ -102,6 +102,18 @@ h1 {
         cursor: pointer;
         z-index: 100;
         height: 20px;
+    }
+}
+
+@media (max-width: 568px) {
+    header {
+        padding-inline: 1.5rem;
+    }
+}
+
+@media (min-width: 569px) and (max-width: 1024px) {
+    header {
+        padding-inline: 3rem;
     }
 }
 
